...
            ),
            RadioListTile(
              title: const Text("Sì"),
              value: "Si",
              groupValue: consensoRadio,
...
            ),
            RadioListTile(
              title: const Text("No"),
              value: "No",
              groupValue: consensoRadio,
...
                          style: ThemeText.bottoneRosso,
                          child: const Text(
                            "Inoltra", style: TextStyle(color: Colors.white),
                          ),
                        ),
...
                    ),
                    TextFormField(
                      key: ValueKey('Nome vittima'),
                      decoration:
                          const InputDecoration(labelText: 'Nome vittima'),
...
                    ),
                    TextFormField(
                      key: ValueKey('Cognome vittima'),
                      decoration:
                          const InputDecoration(labelText: 'Cognome vittima'),
...
                      children: <Widget>[
                        ElevatedButton(
                          key: Key("Continua1"),
                          onPressed: details.onStepContinue,
                          style: ThemeText.bottoneRosso,
...
                        children: <Widget>[
                          TextFormField(
                            key: ValueKey('Nome'),
                            decoration:
                                const InputDecoration(labelText: 'Nome'),
...
                          //AGGIUNTO
                          TextFormField(
                            key: ValueKey('Regione'),
                            decoration:
                                const InputDecoration(labelText: 'Regione'),
...
                          ),
                          TextFormField(
                            key: ValueKey('Indirizzo'),
                            decoration:
                                const InputDecoration(labelText: 'Indirizzo'),
...
                          ),
                          TextFormField(
                            key: ValueKey('CAP'),
                            decoration: const InputDecoration(labelText: 'CAP'),
                            controller: capController,
...
                          ),
                          TextFormField(
                            key: ValueKey('Provincia'),
                            decoration: const InputDecoration(
                                labelText: 'Sigla provincia'),
...
                          ),
                          TextFormField(
                            key: ValueKey('Numero telefonico'),
                            keyboardType: TextInputType.phone,
                            controller: numberController,
...
                          ),
                          TextFormField(
                            key: ValueKey('E-mail'),
                            keyboardType: TextInputType.emailAddress,
                            controller: emailController,
...
                          ),
                          TextFormField(
                            key: ValueKey('Nome oppressore'),
                            decoration: const InputDecoration(
                                labelText: 'Nome oppressore'),
...
                  Step(
                    title: const Text(
                      "Vicenda",
                      style: ThemeText.titoloInoltro,
                    ),
...
